--- a/Cheroto.Data/Cheroto.Data.csproj
+++ b/Cheroto.Data/Cheroto.Data.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="CherotoContext.cs" />
     <Compile Include="Configuration\ProductConfiguration.cs" />
+    <Compile Include="CustomerRepository.cs" />
     <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
