CPF verification implementation (incorrect)

--- a/Cheroto.Core/Cheroto.Core.csproj
+++ b/Cheroto.Core/Cheroto.Core.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="IVerificationDigitCalculator.cs" />
     <Compile Include="CPFVerificationDigitCalculator.cs" />
+    <Compile Include="Tester.cs" />
     <Compile Include="RGVerificationDigitCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
