--- a/Cheroto.Core.Tests/Cheroto.Core.Tests.csproj
+++ b/Cheroto.Core.Tests/Cheroto.Core.Tests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CPFVerificationDigitCalculatorTests.cs" />
     <Compile Include="RGVerificationDigitCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
